--- a/frontend/src/app/acceuil/caisses/caisses.component.html
+++ b/frontend/src/app/acceuil/caisses/caisses.component.html
@@ -2,11 +2,20 @@
   <div
     *ngFor="let caisse of total_caisses; let i = index"
     (click)="change_caisse(caisse.name)"
-    [ngClass]="{ 'bg-secondary border-none dark:bg-dark_secondary -translate-y-1': selected_caisse == caisse.name }"
-    class="h-full bg-white w-1/4 py-3 border-2 border-fifth text-center text-primary text-responsive-md font-bold rounded-md cursor-pointer active:translate-y-1 transition duration-500 dark:text-gray-300 dark:border-gray-800 dark:bg-dark_primary"
+    [ngClass]="{
+      'bg-secondary border-none dark:bg-dark_secondary -translate-y-1':
+        selected_caisse == caisse.name
+    }"
+    class="h-full bg-white w-1/4 py-3 shadow-lg text-center text-secondary text-responsive-md font-bold rounded-md cursor-pointer active:translate-y-1 transition duration-500 dark:text-gray-300 dark:bg-dark_primary"
   >
-    <span [ngClass]="{ 'text-gray-100 ': selected_caisse == caisse.name }" class=""><i class="fas fa-cash-register fa-2xl"></i></span>
+    <span [ngClass]="{ 'text-gray-100 ': selected_caisse == caisse.name }" class=""
+      ><i class="fas fa-cash-register fa-xl"></i
+    ></span>
     <br />
-    <span [ngClass]="{ 'text-gray-100 ': selected_caisse == caisse.name }" class="text-responsive-sm">Caisse {{ i + 1 }}</span>
+    <span
+      [ngClass]="{ 'text-gray-100 ': selected_caisse == caisse.name }"
+      class="text-responsive-sm"
+      >Caisse {{ i + 1 }}</span
+    >
   </div>
 </div>
