--- a/frontend/src/app/acceuil/confirm/confirm.component.html
+++ b/frontend/src/app/acceuil/confirm/confirm.component.html
@@ -1,21 +1,25 @@
 <form action="" class="p-4 h-full">
   <div class="flex gap-2">
     <input
-      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-gray-900 dark:border-gray-600 dark:text-white"
+      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
       placeholder="Versement"
     />
     <input
-      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-gray-900 dark:border-gray-600 dark:text-white"
+      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
       placeholder="Remise"
     />
   </div>
   <div class="flex gap-2">
-    <button class="bg-secondary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_primary">
+    <button
+      class="bg-secondary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_primary"
+    >
       Imprimer (F4)
     </button>
-    <button class="bg-primary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_secondary">
+    <button
+      class="bg-primary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_secondary"
+    >
       Valider vente (F2)
     </button>
   </div>
