--- a/frontend/src/app/acceuil/acceuil.component.html
+++ b/frontend/src/app/acceuil/acceuil.component.html
@@ -11,7 +11,7 @@
   <div class="w-3/4 h-full backdrop-blur-2xl rounded-lg shadow-lg overflow-hidden">
     <app-products [all_products]="all_products" [selected_caisse]="selected_caisse"></app-products>
   </div>
-  <div class="w-1/4 flex flex-col gap-4 overflow-hidden">
+  <div class="w-1/4 flex flex-col gap-4">
     <div class="h-1/2 rounded-lg">
       <app-caisses
         [selected_caisse]="selected_caisse"
