--- a/frontend/src/app/acceuil/confirm/confirm.component.html
+++ b/frontend/src/app/acceuil/confirm/confirm.component.html
@@ -1,26 +1,28 @@
 <form action="" class="p-4 h-full">
   <div class="flex gap-2">
     <input
+      id="input_versement"
       class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
-      placeholder="Versement"
+      placeholder="Versement (F8)"
     />
     <input
+      id="input_remise"
       class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
-      placeholder="Remise"
+      placeholder="Remise (F9)"
     />
   </div>
   <div class="flex gap-2">
     <button
-      class="bg-secondary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_primary"
+      class="bg-primary w-full text-white rounded-md px-2 py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_secondary"
     >
-      Imprimer (F4)
+      Vendre <span class="text-sm">(F2)</span>
     </button>
     <button
-      class="bg-primary w-full text-white rounded-md py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_secondary"
+      class="bg-secondary w-full text-white rounded-md px-2 py-3 text-responsive-sm font-semibold hover:opacity-75 transition duration-500 active:translate-y-1 dark:bg-dark_primary"
     >
-      Valider vente (F2)
+      Imprimer <span class="text-sm">(F4)</span>
     </button>
   </div>
 </form>
