--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{ dark: dark_mode }">
-  <div class="content w-screen h-screen flex flex-row dark:bg-main-dark">
+  <div class="content w-screen h-screen flex flex-row bg-main-light dark:bg-main-dark">
     <div class="w-14 h-full bg-white shadow-2xl relative dark:bg-dark_primary">
       <a
         *ngFor="let element of navbar_elements; let i = index"
