--- a/frontend/src/app/acceuil/acceuil.component.html
+++ b/frontend/src/app/acceuil/acceuil.component.html
@@ -2,7 +2,7 @@
   <div class="w-3/4 backdrop-blur-md rounded-lg shadow-lg">
     <app-price [total_price]="total_price" [selected_caisse]="selected_caisse"></app-price>
   </div>
-  <div class="w-1/4">
+  <div class="w-1/4 h-fit backdrop-blur-md">
     <app-date></app-date>
   </div>
 </div>
@@ -11,17 +11,17 @@
   <div class="w-3/4 h-full backdrop-blur-2xl rounded-lg shadow-lg overflow-hidden">
     <app-products [all_products]="all_products" [selected_caisse]="selected_caisse"></app-products>
   </div>
-  <div class="w-1/4 flex flex-col gap-4">
+  <div class="w-1/4 h-fit flex flex-col gap-4">
     <div class="h-1/2 rounded-lg">
       <app-caisses
         [selected_caisse]="selected_caisse"
         [total_caisses]="total_caisses"
       ></app-caisses>
     </div>
-    <div class="h-full rounded-lg">
+    <div class="h-fit rounded-lg backdrop-blur-md">
       <app-clients></app-clients>
     </div>
-    <div class="h-1/2 rounded-lg">
+    <div class="h-fit rounded-lg">
       <app-confirm></app-confirm>
     </div>
   </div>
