--- a/frontend/src/app/reglages/reglages.component.html
+++ b/frontend/src/app/reglages/reglages.component.html
@@ -1,3 +1,5 @@
 <div class="relative w-full h-full">
-  <div class="bg-white w-1/2 h-3/4 rounded-lg absolute right-0 left-0 top-1/2 -translate-y-1/2 m-auto shadow-lg dark:bg-gray-900"></div>
+  <div
+    class="w-1/2 h-3/4 rounded-lg absolute right-0 left-0 top-1/2 -translate-y-1/2 m-auto shadow-lg backdrop-blur-xl"
+  ></div>
 </div>
