--- a/frontend/src/app/acceuil/date/date.component.html
+++ b/frontend/src/app/acceuil/date/date.component.html
@@ -1,4 +1,4 @@
-<div class="p-4 h-full">
+<div class="h-full">
   <div class="w-full h-full">
     <div
       class="text-responsive-lg text-center text-gray-700 font-bold leading-relaxed py-2 dark:text-gray-300"
