--- a/frontend/src/app/acceuil/products/products.component.html
+++ b/frontend/src/app/acceuil/products/products.component.html
@@ -61,7 +61,7 @@
 
     <div
       *ngIf="show_suggestions"
-      class="shadow-lg absolute top-0 w-full h-fit max-h-60 overflow-auto z-40 dark:bg-dark_secondary"
+      class="shadow-lg absolute top-0 w-full h-fit max-h-60 overflow-auto z-40 bg-white dark:bg-dark_secondary"
     >
       <div
         (click)="submit_search(product.id, f)"
