--- a/frontend/src/app/acceuil/confirm/confirm.component.html
+++ b/frontend/src/app/acceuil/confirm/confirm.component.html
@@ -1,14 +1,14 @@
 <form action="" class="p-4 h-full">
-  <div class="flex gap-2">
+  <div class="flex gap-2 mb-6">
     <input
       id="input_versement"
-      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
+      class="w-full px-4 py-3 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
       placeholder="Versement (F8)"
     />
     <input
       id="input_remise"
-      class="w-full px-4 py-2 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
+      class="w-full px-4 py-3 my-2 border border-gray-300 rounded-md text-responsive-sm focus:outline-none dark:bg-dark_primary dark:border-gray-600 dark:text-white"
       type="number"
       placeholder="Remise (F9)"
     />
