--- a/frontend/src/app/reglages/reglages.component.html
+++ b/frontend/src/app/reglages/reglages.component.html
@@ -1,5 +1,21 @@
 <div class="relative w-full h-full">
   <div
-    class="w-1/2 h-3/4 rounded-lg absolute right-0 left-0 top-1/2 -translate-y-1/2 m-auto shadow-lg backdrop-blur-xl"
-  ></div>
+    class="w-3/4 2xl:w-1/2 max-h-fit min-h-1/2 rounded-lg absolute right-0 left-0 top-1/2 -translate-y-1/2 m-auto shadow-lg bg-white py-4 px-6 dark:text-gray-200 dark:bg-dark_secondary"
+  >
+    <div>
+      <div
+        class="flex gap-12 border-b border-gray-200 text-gray-500 dark:text-gray-400 dark:border-gray-700"
+      >
+        <a routerLink="base" routerLinkActive="text-gray-900 font-semibold dark:text-gray-100"
+          >Bases</a
+        >
+        <a routerLink="ticket" routerLinkActive="text-gray-900 font-semibold dark:text-gray-100"
+          >Ticket de caisse</a
+        >
+      </div>
+      <div>
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
 </div>
